deploy/k8s/overlays/dev/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: section
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interaction
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
