deploy/k8s/overlays/dev/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  template:
    spec:
      containers:
      - name: user
        resources:
          requests:
            cpu: 200m
            memory: 384Mi
          limits:
            cpu: 800m
            memory: 768Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  template:
    spec:
      containers:
      - name: auth
        resources:
          requests:
            cpu: 200m
            memory: 384Mi
          limits:
            cpu: 800m
            memory: 768Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: section
spec:
  template:
    spec:
      containers:
      - name: section
        resources:
          requests:
            cpu: 150m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post
spec:
  template:
    spec:
      containers:
      - name: post
        resources:
          requests:
            cpu: 200m
            memory: 384Mi
          limits:
            cpu: 800m
            memory: 768Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment
spec:
  template:
    spec:
      containers:
      - name: comment
        resources:
          requests:
            cpu: 150m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interaction
spec:
  template:
    spec:
      containers:
      - name: interaction
        resources:
          requests:
            cpu: 150m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
spec:
  template:
    spec:
      containers:
      - name: search
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file
spec:
  template:
    spec:
      containers:
      - name: file
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  template:
    spec:
      containers:
      - name: gateway
        resources:
          requests:
            cpu: 200m
            memory: 384Mi
          limits:
            cpu: 800m
            memory: 768Mi
